--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,24 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class="container header-container">
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-    <h1 class="display-4 text-success">Content will show here!</h1>
+<div class="hero-image">
+<img src="media/main.jpg" class="img-fluid" alt="...">
+<div class="hero-text">
+    <h1>Vision Furniture</h1>
+    <p>Refresh your space</p>
+    <button>View All Products</button>
+</div>
+</div>
+
 {% endblock %}
