Add mobile header and search bar

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,9 +15,9 @@
 <div class="hero-image">
 <img src="media/main.jpg" class="img-fluid" alt="...">
 <div class="hero-text">
-    <h1>Vision Furniture</h1>
+    <h1 class="hero-title">Vision Furniture</h1>
     <p>Refresh your space</p>
-    <button>View All Products</button>
+    <div class="btn-cont" align="center"><a class="btns" href="" target="_blank">View Our Stock</a></div>
 </div>
 </div>
 
