Add products app and models

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,5 +20,15 @@
     <div class="btn-cont" align="center"><a class="btns" href="" target="_blank">View Our Stock</a></div>
 </div>
 </div>
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col 12 text-center">
+            <h1>Welcome!</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni soluta delectus voluptatum quidem corporis distinctio, 
+                nesciunt possimus odit quam? Numquam neque quisquam quia doloribus odio, cum similique nulla ad est sapiente iure eveniet 
+                illo dolores excepturi nobis voluptates. Fuga voluptates incidunt doloribus optio, 
+                quam sapiente sed eligendi sequi earum dolorem.</p>
+        </div>
+    </div>
+</div>
 {% endblock %}
