Add products views and templates

--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -10,7 +10,7 @@
     </a>
 </li>
 <!-- Account -->
-<span><li class="list-inline-item dropdown d-lg-none">
+<li class="list-inline-item dropdown d-lg-none">
     <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">
         <div class="text-center">
