--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}"><img src="media/vision-logo.png" class="logo-image" alt="..."></a>
+            <a class="navbar-brand" href="{% url 'home' %}"><img src="{{ MEDIA_URL }}vision-logo.png" class="logo-image" alt="..."></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
