--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -1,21 +1,38 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block page_header %}
-    <div class="container header-container">
+{% block content %}
+    <div class="container-fluid nav-padding">
         <div class="row">
-            <div class="col">
-
+            <div class="col text-center mt-3">
+                <h2 class="main-heading-padding">All Products</h2>
             </div>
         </div>
-    </div>
-{% endblock %}
-
-{% block content %}
-    <div class="container">
         <div class="row">
-            <div class="col">
-                {{ products }}
+            <div class="product-container col-10 offset-1">
+                <div class="row">
+                    {% for product in products %}
+                        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                            <div class="card product-box">
+                                {% if product.image %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                </a>
+                                {% else %}
+                                <a href="">
+                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                </a>
+                                {% endif %}
+                                <div class="card-body pb-0 text-center">
+                                    <p >{{ product.name }}</p>
+                                    <p>£{{ product.price }}</p>
+                                    <button class="btns">Add to cart</button>
+                                </div>
+                            <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
     </div>
