--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
     <title>Vision Furniture {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body>
+<body class="home-page">
     <header class="fixed-top">
     
     {% if messages %}
@@ -68,7 +68,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">All Products</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'products' %}">All Products</a>
                     </li>
                     <li class="nav-item dropdown position-static">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
