--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -26,7 +26,7 @@
                                 <div class="card-body pb-0 text-center">
                                     <p >{{ product.name }}</p>
                                     <p>£{{ product.price }}</p>
-                                    <button class="btns">Add to cart</button>
+                                    <button class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
                                 </div>
                             <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
                             </div>
