--- a/templates/base.html
+++ b/templates/base.html
@@ -173,12 +173,12 @@
     <div class="container-fluid bg-light footer-style">
         <div class="row">
             <div class="col col-lg-4 social-icons">
-                <i class="fab fa-facebook-square "></i>
-                <i class="fab fa-instagram-square"></i>
-                <i class="fab fa-twitter-square"></i>
+                <a href="https://twitter.com/" target="_blank"><i class="fab fa-facebook-square "></i></a>
+                <a class="insta" href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-twitter-square"></i></a>
             </div>
-            <div class="col col-lg-4 offset-md-4 text-right my-auto help-btn">
-                <button class="btns">Need Help? <i class="fas fa-bullhorn"></i></button>
+            <div class="col col-lg-4 offset-md-4 text-right my-auto help-btn-padding">
+                <button class="btns help-btn-style">Need Help? <i class="fas fa-bullhorn"></i></button>
             </div>
         </div>
     </div>
@@ -188,7 +188,5 @@
 
     
 </body>
-
-
 </html>
 
