Add product details functionality

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,7 +7,7 @@
 <div class="hero-text">
     <h1 class="hero-title">Vision Furniture</h1>
     <p>Refresh your space</p>
-    <div class="btn-cont" align="center"><a class="btns" href="{% url 'products' %}" target="_blank">View Our Stock</a></div>
+    <div class="btn-cont" align="center"><a class="btns" href="{% url 'products' %}">View Our Stock</a></div>
 </div>
 </div>
 <div class="container-fluid">
