--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -9,21 +9,21 @@
             </div>
         </div>
         <div class="row">
-            <div class="product-container col-10 offset-1">
+            <div class="col-10 offset-1">
                 <div class="row">
                     {% for product in products %}
                         <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
                             <div class="card product-box">
                                 {% if product.image %}
-                                <a href="">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                <a href="{% url 'product_details' product.id %}">
+                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
                                 </a>
                                 {% else %}
-                                <a href="">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                <a href="{% url 'product_details' product.id %}">
+                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                                 </a>
                                 {% endif %}
-                                <div class="card-body pb-0 text-center">
+                                <div class="card-body text-center">
                                     <p >{{ product.name }}</p>
                                     <p>£{{ product.price }}</p>
                                     <button class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
