--- a/static/css/base.css
+++ b/static/css/base.css
@@ -80,6 +80,7 @@ nav a {
 }
 
 .product-box {
+    border-style: solid;
     border-color: black;
     padding: 50px 60px;
     margin-bottom: 30px;
