Add search functionality

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -5,7 +5,7 @@
     <div class="container-fluid nav-padding">
         <div class="row">
             <div class="col text-center mt-3">
-                <h2 class="main-heading-padding">All Products</h2>
+                <h2 class="main-heading-padding">Products</h2>
             </div>
         </div>
         <div class="row">
