--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
                 </ul>
             </div>
             <div class="d-none d-lg-block">
-            <form method="GET" action="" class="d-flex">
+            <form method="GET" action="{% url 'products' %}" class="d-flex">
                 <div class="input-group w-100">
                     <input class="form-control me-2" type="text" name="q" placeholder="What is your Vision?"
                         aria-label="Search">
