--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,38 +2,51 @@
 {% load static %}
 
 {% block content %}
-    <div class="container-fluid nav-padding">
-        <div class="row">
-            <div class="col text-center mt-3">
-                <h2 class="main-heading-padding">Products</h2>
-            </div>
+<div class="container-fluid nav-padding">
+    <div class="row">
+        <div class="col text-center mt-3">
+            <h2 class="main-heading-padding">Products</h2>
         </div>
+    </div>
         <div class="row">
-            <div class="col-10 offset-1">
-                <div class="row">
-                    {% for product in products %}
-                        <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
-                            <div class="card product-box">
-                                {% if product.image %}
-                                <a href="{% url 'product_details' product.id %}">
-                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                </a>
-                                {% else %}
-                                <a href="{% url 'product_details' product.id %}">
-                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                </a>
-                                {% endif %}
-                                <div class="card-body text-center">
-                                    <p >{{ product.name }}</p>
-                                    <p>£{{ product.price }}</p>
-                                    <button class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
-                                </div>
-                            <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
-                            </div>
+        <div class="col-4 offset-4 pb-3">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 text-center">
+            {% for r in current_rooms %}
+                <h3 class="pb-3">{{ r.friendly_name }}</h3>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-10 offset-1">
+            <div class="row">
+                {% for product in products %}
+                <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4">
+                    <div class="card product-box">
+                        {% if product.image %}
+                        <a href="{% url 'product_details' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_details' product.id %}">
+                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
+                                alt="{{ product.name }}">
+                        </a>
+                        {% endif %}
+                        <div class="card-body text-center">
+                            <p>{{ product.name }}</p>
+                            <p>£{{ product.price }}</p>
+                            <button class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
                         </div>
-                    {% endfor %}
+                        <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
+                    </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
