--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,7 @@
             <h2 class="main-heading-padding">Products</h2>
         </div>
     </div>
-        <div class="row">
+    <div class="row">
         <div class="col-4 offset-4 pb-3">
             <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
         </div>
@@ -16,9 +16,35 @@
     <div class="row">
         <div class="col-12 text-center">
             {% for r in current_rooms %}
-                <h3 class="pb-3">{{ r.friendly_name }}</h3>
+            <h3 class="pb-3">{{ r.friendly_name }}</h3>
             {% endfor %}
         </div>
+    </div>
+    <div class="row mt-1 mb-2">
+        <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+            <div class="sort-select-wrapper w-50">
+                <select id="sort-dropdown" 
+                class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
+                    <option value="reset" {% if current_sorting == 'None_None' %}selected{% endif %}>Sort by...</option>
+                    <option value="price_asc" {% if current_sorting == 'price_asc' %}selected{% endif %}>Price (low to
+                        high)</option>
+                    <option value="price_desc" {% if current_sorting == 'price_desc' %}selected{% endif %}>Price (high
+                        to low)</option>
+                    <option value="name_asc" {% if current_sorting == 'name_asc' %}selected{% endif %}>Name (A-Z)
+                    </option>
+                    <option value="name_desc" {% if current_sorting == 'name_desc' %}selected{% endif %}>Name (Z-A)
+                    </option>
+                </select>
+            </div>
+        </div>
+        {% if search_term != 'None_None' %}
+        <div class="col-12 col-md-6 order-md-first">
+            <p class="text-muted mt-3 text-center text-md-left">
+            {{ products|length }} Products{% if search_term %} found for
+            <strong>"{{ search_term }}"</strong>{% endif %}
+            </p>
+        </div>
+        {% endif %}
     </div>
     <div class="row">
         <div class="col-10 offset-1">
@@ -49,4 +75,41 @@
         </div>
     </div>
 </div>
+    <div class="up-btn shadow-sm border border-black bg-white">
+        <a class="upbtn-link d-flex h-100">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+        </a>	
+    </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.upbtn-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
+    <script type="text/javascript">
+        $('#sort-dropdown').change(function() {
+            let selector = $(this);
+            let currentUrl = new URL(window.location);
+
+            let valSelected = selector.val();
+            if(valSelected != "reset"){
+                let sort = valSelected.split("_")[0];
+                let direction = valSelected.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
