--- a/templates/includes/searchbar.html
+++ b/templates/includes/searchbar.html
@@ -5,7 +5,7 @@
             <input class="form-control me-2" type="text" name="q" placeholder="What is your Vision?"
                 aria-label="Search">
             <div class="input-group-append">
-                <button class="form-control btn btn-outline-success" type="submit">
+                <button class="form-control btn btn-outline-success bg-white" type="submit">
                     <span class="icon"><i class="fas fa-search"></i></span>
                 </button>
             </div>
