--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -18,13 +18,37 @@
                     {% endif %}
                 </div>
                 <div class="col-12 col-md-6 col-lg-6 my-auto">
-                    <p>{{ product.name }}</p>
+                    <h3>{{ product.name }}</h3>
                     <p>£{{ product.price }}</p>
                     <p>{{ product.description }}</p>
                     <p>Dimensions: {{ product.depth }}cm x {{ product.height }}cm x {{ product.width }}cm</p>
                     <p>Delivery Cost: £{{ product.delivery_cost }}</p>
-                    <button class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
+                    <form class="form" action="{% url 'add_to_cart' product.id %}" method="POST">
+                        {% csrf_token %}
+                        <div class="form-row">
+                            <div class="col-12">
+                                <p class="mt-3"><strong>Quantity:</strong></p>
+                                <div class="form-group w-50">
+                                    <div class="input-group">
+                                        <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
+                                    </div>
+                                </div>
+                            </div>
+                            
+                            <button type="submit" class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
+                            <div class="col-12">
+                                <a href="{% url 'products' %}" class="btn rounded-0 mt-5">
+                                    <span class="icon">
+                                        <i class="fas fa-chevron-left"></i>
+                                    </span>
+                                    <span class="text-uppercase">Keep Shopping</span>
+                                </a>
+                            </div>
+                            <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                        </div>
+                    </form>
                     <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
+                    
                 </div>
                 
             </div>
