--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -8,51 +8,46 @@
             <h2 class="main-heading-padding">Shopping Cart</h2>
         </div>
     </div>
+    {% if cart_items %}
     <div class="row">
-        <div class="col">
-            {% if bag_items %}
-            <div class="table-responsive rounded"></div>
-            {% else %}
-            <p class="lead mb-5">Your bag is empty.</p>
-            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                <span class="icon">
-                    <i class="fas fa-chevron-left"></i>
-                </span>
-                <span class="text-uppercase">Keep Shopping</span>
-            </a>
-            {% endif %}
+        <div class="col-3 text-center">
+            <p>Product Info</p>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-4">
-            <p>Product</p>
-        </div>
-        <div class="col-2">
-            <p>Price</p>
-        </div>
-        <div class="col-2">
+        <div class="col-3 text-center">
             <p>Quantity</p>
         </div>
-        <div class="col-2">
+        <div class="col-2 text-center">
+            <p>Price</p>
+        </div>
+        <div class="col-2 text-center">
+            <p>Delivery</p>
+        </div>
+        <div class="col-2 text-center">
             <p>Total</p>
         </div>
     </div>
     <hr>
+    {% for item in cart_items %}
     <div class="row">
-        <div class="col-4">
-            <p>Product</p>
+        <div class="col-3 text-center">
+            <p>{{ item.product.name }}</p>
+            <img src="{{ item.product.image.url }}" class="img-fluid w-25" alt="">
         </div>
-        <div class="col-2">
-            <p>Price</p>
+        <div class="col-3 my-auto text-center">
+            <p>{{ item.quantity }}</p>
         </div>
-        <div class="col-2">
-            <p>Quantity</p>
+        <div class="col-2 my-auto text-center">
+            <p>£{{ item.product.price }}</p>
         </div>
-        <div class="col-2">
-            <p>Total</p>
+        <div class="col-2 my-auto text-center">
+            <p>{{ item.product.delivery_cost }}</p>
+        </div>
+        <div class="col-2 my-auto text-center">
+            <p>£{{ item.product.price }}</p>
         </div>
     </div>
     <hr>
+    {% endfor %}
     <div class="row">
         <div class="col-6">
             Delivery Total:
@@ -67,8 +62,33 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
-            Checkout button
+        <div class="col-12 text-center">
+            <a href="{% url 'products' %}"
+                class="btn btn-outline-black rounded-0 btn-lg">
+                <span class="icon">
+                    <i class="fas fa-chevron-left"></i>
+                </span>
+                <span class="text-uppercase">Keep Shopping</span>
+            </a>
+            <a href="" class="btns">
+                <span class="text-uppercase">Secure Checkout</span>
+                <span class="icon">
+                    <i class="fas fa-lock"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="row">
+    <div class="col">
+    {% else %}
+        <p class="lead mb-5">Your cart is empty.</p>
+        <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
+            <span class="icon">
+                <i class="fas fa-chevron-left"></i>
+            </span>
+            <span class="text-uppercase">Keep Shopping</span>
+        </a>
+    {% endif %}
         </div>
     </div>
 </div>
