--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -13,11 +13,11 @@
         <div class="col-3 text-center">
             <p>Product Info</p>
         </div>
-        <div class="col-3 text-center">
-            <p>Quantity</p>
-        </div>
         <div class="col-2 text-center">
             <p>Price</p>
+        </div>
+        <div class="col-3 text-center">
+            <p>Quantity</p>
         </div>
         <div class="col-2 text-center">
             <p>Delivery</p>
@@ -33,14 +33,48 @@
             <p>{{ item.product.name }}</p>
             <img src="{{ item.product.image.url }}" class="img-fluid w-25" alt="">
         </div>
-        <div class="col-3 my-auto text-center">
-            <p>{{ item.quantity }}</p>
-        </div>
         <div class="col-2 my-auto text-center">
             <p>£{{ item.product.price }}</p>
         </div>
+        <div class="col-3 my-auto justify-content-center">
+            <form class="form update-form" method="POST" action="">
+                {% csrf_token %}
+                <div class="form-group">
+                    <div class="row">
+                    <div class="input-group col-6 offset-3">
+                        <div class="input-group-prepend">
+                            <button class="decrement-qty btn" 
+                                data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                <span>
+                                    <i class="fas fa-minus fa-sm"></i>
+                                </span>
+                            </button>
+                        </div>
+                        <input class="form-control form-control-sm qty_input" type="number"
+                            name="quantity" value="{{ item.quantity }}" min="1" max="4"
+                            data-item_id="{{ item.item_id }}"
+                            id="id_qty_{{ item.item_id }}">
+                        <div class="input-group-append">
+                            <button class="increment-qty btn"
+                                data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                <span>
+                                    <i class="fas fa-plus fa-sm"></i>
+                                </span>
+                            </button>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 offset-3">
+                            <a class="update-link text-info"><small>Update</small></a> 
+                            <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}"><small>Remove</small></a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
         <div class="col-2 my-auto text-center">
-            <p>{{ item.product.delivery_cost }}</p>
+            <p>£{{ item.product.delivery_cost }}</p>
         </div>
         <div class="col-2 my-auto text-center">
             <p>£{{ item.product.price }}</p>
@@ -92,4 +126,32 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e) {
+        let form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
+        let csrfToken = "{{ csrf_token }}";
+        let itemId = $(this).attr('id').split('remove_')[1];
+        let size = $(this).data('size');
+        let url = `/bag/remove/${itemId}`;
+        let data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
+
+        $.post(url, data)
+         .done(function() {
+             location.reload();
+         });
+    })
+</script>
+
 {% endblock %}
