--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -49,7 +49,8 @@
                                                     <i class="fas fa-plus"></i>
                                                 </span>
                                             </button>
-                                        </div>                                    </div>
+                                        </div>                                    
+                                    </div>
                                 </div>
                             </div>
                             
