--- a/static/css/base.css
+++ b/static/css/base.css
@@ -123,7 +123,9 @@ text-decoration: none;
     border-radius: 50%;
 }
 
-.upbtn-link {
+.upbtn-link,
+.update-link,
+.remove-item {
     cursor: pointer;
 }
 .footer-style {
