--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load cart_tools %}
 
 {% block content %}
 <div class="container-fluid nav-padding">
@@ -37,7 +38,7 @@
             <p>£{{ item.product.price }}</p>
         </div>
         <div class="col-3 my-auto justify-content-center">
-            <form class="form update-form" method="POST" action="">
+            <form class="form update-form" method="POST" action="{% url 'adjust_cart' item.item_id %}">
                 {% csrf_token %}
                 <div class="form-group">
                     <div class="row">
@@ -77,7 +78,7 @@
             <p>£{{ item.product.delivery_cost }}</p>
         </div>
         <div class="col-2 my-auto text-center">
-            <p>£{{ item.product.price }}</p>
+            <p>£{{ item.product.price | calc_subtotal:item.quantity }}</p>
         </div>
     </div>
     <hr>
@@ -131,27 +132,8 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
+{% include 'products/includes/quantity_update_script.html' %}
 
-<script type="text/javascript">
-    // Update quantity on click
-    $('.update-link').click(function(e) {
-        let form = $(this).prev('.update-form');
-        form.submit();
-    })
 
-    // Remove item and reload on click
-    $('.remove-item').click(function(e) {
-        let csrfToken = "{{ csrf_token }}";
-        let itemId = $(this).attr('id').split('remove_')[1];
-        let size = $(this).data('size');
-        let url = `/bag/remove/${itemId}`;
-        let data = {'csrfmiddlewaretoken': csrfToken, 'size': size};
-
-        $.post(url, data)
-         .done(function() {
-             location.reload();
-         });
-    })
-</script>
 
 {% endblock %}
