--- a/static/css/base.css
+++ b/static/css/base.css
@@ -141,6 +141,23 @@ text-decoration: none;
     color: #e1306c;
 }
 
+/* bootstrap toasts */
+
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 99999999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
+
 /* Tablet view */
 @media (max-width: 1030px) {
 .hero-title {
