--- a/templates/base.html
+++ b/templates/base.html
@@ -51,9 +51,7 @@
 <body class="home-page">
     <header class="fixed-top">
     
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %}
+
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -164,6 +162,24 @@
     {% include 'includes/searchbar.html' %}
 </header>
 
+    {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+                {% with message.level as level %}
+                    {% if level == 40 %}
+                        {% include 'includes/toasts/toast_error.html' %}
+                    {% elif level == 30 %}
+                        {% include 'includes/toasts/toast_warning.html' %}
+                    {% elif level == 25 %}
+                        {% include 'includes/toasts/toast_success.html' %}
+                    {% else %}
+                        {% include 'includes/toasts/toast_info.html' %}
+                    {% endif %}
+                {% endwith %}
+            {% endfor %}
+        </div>
+    {% endif %}
+
     {% block page_header %}
     {% endblock %}
 
@@ -184,7 +200,11 @@
         </div>
     </div>
 </footer> 
+
     {% block postloadjs %}
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
     {% endblock %}
 
     
