--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -65,7 +65,7 @@
                         <div class="card-body text-center">
                             <p>{{ product.name }}</p>
                             <p>£{{ product.price }}</p>
-                            <button type="submit" class="btns">Add to cart <i class="fas fa-shopping-cart fa-lg"></i></button>
+                            <a href="{% url 'product_details' product.id %}" class="btns">View Item <i class="fas fa-binoculars fa-lg"></i></a>
                         </div>
                         <div class="fav-icon"><i class="far fa-heart fa-lg"></i></div>
                     </div>
