--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -9,6 +9,11 @@
             <h2 class="main-heading-padding">Shopping Cart</h2>
         </div>
     </div>
+    <div class="row">
+        <div class="col-4 offset-4 pb-5">
+            <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+        </div>
+    </div>
     {% if cart_items %}
     <div class="row">
         <div class="col-3 text-center">
@@ -105,7 +110,7 @@
                 </span>
                 <span class="text-uppercase">Keep Shopping</span>
             </a>
-            <a href="" class="btns">
+            <a href="{% url 'checkout' %}" class="btns">
                 <span class="text-uppercase">Secure Checkout</span>
                 <span class="icon">
                     <i class="fas fa-lock"></i>
