--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -19,7 +19,7 @@
     </div>
     <div class="row">
         <div class="col text-center mt-3">
-            <h4>Order Information:</h4>
+            <h4>Order Summary</h4>
         </div>
     </div>
     <div class="row">
