--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -36,6 +36,20 @@
     border: 1px solid #000;
 }
 
+select,
+select option {
+    color: #000000;
+}
+
+select {
+    font-size: 10px;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
+
 #loading-overlay {
 	display: none;
 	position: fixed;
