Updated allauth templates and tested profiles

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -17,5 +17,6 @@
             <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
         </div>
     </div>
+    {{ profile }}
 
 {% endblock %}
