--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -4,13 +4,24 @@
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
+{% block inner_content %}
+
+    <div class="container-fluid">
+    <div class="row">
+    <div class="col text-center mt-3">
+        <h2 class="main-heading-padding">{% trans "Change Password" %}</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-4 offset-4 pb-5">
+        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    </div>
+</div>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
+        {{ form|crispy }}
+        <button class="btns" type="submit" name="action">{% trans "Change Password" %}</button>
         <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </form>
 {% endblock %}
