--- a/templates/allauth/account/email_confirm.html
+++ b/templates/allauth/account/email_confirm.html
@@ -6,8 +6,19 @@
 {% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
 
 
-{% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+{% block inner_content %}
+
+<div class="container-fluid">
+    <div class="row">
+    <div class="col text-center mt-3">
+        <h2 class="main-heading-padding">{% trans "Confirm E-mail Address" %}}</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-4 offset-4 pb-5">
+        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    </div>
+</div>
 
 {% if confirmation %}
 
@@ -17,7 +28,7 @@
 
 <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
 {% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
+    <button class="btns" type="submit">{% trans 'Confirm' %}</button>
 </form>
 
 {% else %}
