--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -4,8 +4,19 @@
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
-{% block content %}
-    <h1>{% trans "Set Password" %}</h1>
+{% block inner_content %}
+
+    <div class="container-fluid">
+    <div class="row">
+    <div class="col text-center mt-3">
+        <h2 class="main-heading-padding">{% trans "Set Password" %}</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-4 offset-4 pb-5">
+        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    </div>
+</div>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
