--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -4,18 +4,29 @@
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
-{% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+{% block inner_content %}
+
+<div class="container-fluid">
+    <div class="row">
+    <div class="col text-center mt-3">
+        <h2 class="main-heading-padding">{% trans "Sign Up" %}</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="col-4 offset-4 pb-5">
+        <img class="img-fluid" src="{{ MEDIA_URL }}underline.png" alt="">
+    </div>
+</div>
 
 <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
-  {{ form.as_p }}
+  {{ form|crispy }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <button class="btns" type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
 
 {% endblock %}
