--- a/templates/base.html
+++ b/templates/base.html
@@ -52,9 +52,6 @@
 
 <body class="home-page">
     <header class="fixed-top">
-    
-
-    
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><img src="{{ MEDIA_URL }}vision-logo.png" class="logo-image" alt="..."></a>
@@ -134,7 +131,7 @@
                             {% if request.user.is_superuser %}
                             <a href="" class="dropdown-item">Product Management</a>
                             {% endif %}
-                            <a href="" class="dropdown-item">My Profile</a>
+                            <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                             <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                             {% else %}
                             <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
